<resources>

    <string name="login_title">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_again_hint">Confirm Password</string>
    <string name="signup_title">Sign up</string>
    <string name="name_hint">Name</string>
    <string name="error_intro">"Please, "</string>
    <string name="error_blank_username">enter an email </string>
    <string name="error_blank_password">enter a password </string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="error_blank_name">enter a name </string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="hello_blank_fragment">Welcome to profile</string>
    <string name="create_user">Create Account</string>
    <string name="title_activity_company_main_page">CompanyMainPageActivity</string>
    <string name="student_type">Student</string>
    <string name="company_type">Company</string>
    <string name="select_user_type">Select user type</string>
    <string name="error_user_type">select user type</string>
    <string name="logout">Logout</string>
    <string name="error_email_not_valid">enter valid email</string>

    <string name="app_name">JobPlacement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings"> menu_settings</string>
    <string name="Name">Company Name</string>

    <string-array name="drawer_titles">
        <item>Home</item>
        <item>MyProfile</item>
        <item>MyRecord</item>
        <item>Setting</item>
        <item>Search</item>
        <item>Logout</item>

    </string-array>
    <string-array name="drawer_title_company">
        <item>Home</item>
        <item>Profile Management</item>
        <item>Search</item>
        <item>Job Offer</item>
        <item>Logout</item>
        <item>Send message</item>
    </string-array>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>



    <string name="Search">Search</string>
    <string name="company">Course</string>
    <string name="Detail">Detail</string>
    <string name="View">View</string>
    <string name="Delete">Delete</string>
    <string name="Delete1">Delete1</string>
    <string name="Sector">Sector</string>
    <string name="upload_picture">upload_picture</string>
    <string name="list_degrees">list_degrees</string>
    <string name="list_experiences">list_experiences</string>
    <string name="list_languages">list_languages</string>
    <string name="list_skills">Technical skills:</string>
    <!-- for Message-->
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="title">title</string>
    <string name="Applyjob">Applyjob</string>
    <string name="Savejob">Savejob</string>

    <string name="type1">Accepte The job</string>
    <string name="type2">Reject The job</string>
    <string name="type3"> not Sure</string>

    <string name="sendResponse">sendResponse</string>
    <string name="RecivedMessage"> RecivedMessage</string>
    <string name="Responsetype">Responsetype</string>
    <string name="YourMessage">Your Message</string>
    <string name="response">response</string>
    <string name="responsebutton"> responsebutton</string>

    <string-array name="Responsetypelist">
        <item>@string/type1</item>
        <item>@string/type2</item>
        <item>@string/type3</item>
    </string-array>
    <!-- End for Message-->
    <!-- for JOB Detail-->
    <string name="Requirments">Requirments</string>
    <string name="Skill">Skil</string>
    <string name="Language">Language</string>


    <string name="Time">Time</string>
    <string-array name="Tab_array">
        <item>Main</item>
        <item>Inbox</item>
        <item>Check</item>

    </string-array>
    <string name="profileUncomplete">Your profile has not been completed yet,would you like to complete it now?</string>
    <string name="donotAskAgain">Do not ask me again</string>
    <string name="studentName">Name:</string>
    <string name="studentGender">Gender:</string>
    <string name="studentAge">Age:</string>
    <string name="studentSpecialty">Specialty:</string>
    <string name="studentEdu">Educational Background:</string>
    <string name="eduMajor">Major:</string>
    <string name="eduDegree">Degree:</string>
    <string name="eduUniversity">University:</string>
    <string name="Finish">Finish</string>
    <string name="UploadCV">Upload CV</string>
    <string name="title_activity_profile_student">profile_student</string>
    <string name="title_activity_search__specific">Search_Specific</string>
    <string name="title_activity_company__main__page">Company Main Page</string>
    <string name="title_activity_student_profile">StudentProfile</string>
    <string name="action_finish">Save</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="surname_hint">Surname</string>
    <string name="data_birthdate_text">Birthdate</string>
    <string name="data_gender_text">Gender</string>
    <string name="title_activity_company_profile">CompanyProfile</string>
    <string name="no_photo">No photo</string>

    <!--new_offer_fragment_hint_object-->


    <string name="new_offer_fragment_hint_spinnerField">Please choose a field</string>
    <string name="new_offer_fragment_publish">Publish offer</string>
    <string name="new_offer_fragment_spinner_title">Field of offer</string>
    <string name="new_offer_fragment_intro">Basic informations:</string>




    <string name="new_offer_fragment_job_type">Tittle of the Job</string>
    <string name="new_offer_fragment_hint_duration">Term of contract</string>

    <string name="new_offer_fragment_hint_description">Description up to 500 chracters</string>


    <string name="skill_required">Skill required</string>
    <string name="Language_requierd"> Languagerequierd</string>






    <string name="new_offer_fragment_hint_spinnercontract">new_offer_fragment_hint_spinnercontract</string>
    <string name= "new_offer_fragment_hint_location"> new_offer_fragment_hint_location</string>
    <string name="new_offer_fragment_hint_salary">new_offer_fragment_hint_salary</string>
    <string name="new_offer_fragment_Description">new_offer_fragment_Description</string>

    <string name="new_offer_fragment_date"> new_offer_fragment_date</string>
    <string name="new_offer_fragment_hint_validity"> new_offer_fragment_hint_validity</string>
    <string name="new_offer_fragment_hint_number_of_place">new_offer_fragment_hint_number_of_place</string>

    <string name="new_offer_fragment_button">new_offer_fragment_button</string>
    <string name="new_offer_fragment_hint_tags">new_offer_fragment_hint_tags</string>
    <string name="new_offer_fragment_hint_object">new_offer_fragment_hint_object</string>
    <string name="anaggrafic_data_title">Your Basic Information</string>
    <string name="anagrafic_data_hint">Your email is used as username, name and surname is mandatory</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="data_country">country</string>
    <string name="data_region">region</string>
    <string name="data_nationality">nationality</string>
    <string name="address_data_title">Address Info</string>
    <string name="address_data_hint">This informayion can be used when you apply for a job</string>
    <string name="add_degree">Add  a new degree</string>
    <string name="degree_data_title">Background Info</string>
    <string name="degree_data_hint">You have to add a degree, a skill, a language at least!</string>
    <string name="data_university">university</string>
    <string name="data_type">type</string>
    <string name="data_major">major</string>
    <string name="data_start_year">start year</string>
    <string name="data_end_year">end year</string>
    <string name="data_skill">Skill</string>
    <string name="data_language">language</string>
    <string name="data_language_level">level</string>
    <string name="add_button">add</string>
    <string name="error_blank_university">university</string>
    <string name="error_blank_degree_type">degree</string>
    <string name="error_blank_degree_major">major</string>
    <string name="error_blank_degree_start_date">Start Date</string>
    <string name="error_blank_degree_end_date">end date</string>
    <string name="error_blank_skill">enter skill</string>
    <string name="error_blank_language">enter language</string>
    <string name="error_language_level">choose level</string>
    <string name="title_activity_send_new_message">sendNewMessage</string>
    <string name="review_data_title">Review Your Info</string>
    <string name="degree_data">Degree(s)</string>
    <string name="progress_student_save">Saving your data....</string>

    <string name="title_activity_detail__student">Detail_Student</string>


    <string-array name="Date">
        <item>Any date</item>
        <item>Last 30 days</item>
        <item>Last 10 days</item>
        <item>Last 7 days</item>
    </string-array>
    <string-array name="Job_type">
        <item>Any Category</item>
        <item>Full Time</item>
        <item>Part Time</item>
        <item>Seasonal</item>
        <item>Contractor</item>
        <item>Intern</item>
    </string-array>
    <string name="joblist"> Jobs </string>
    <string-array name="fields">
        <item>Mechanical Engineering</item>
        <item>Software Engineering</item>
        <item>Automotive Engineering</item>
        <item>Architecture and Design</item>
        <item>Electronic Engineering</item>
        <item>Telecommunications</item>
        <item>Control Engineering</item>
        <item>Management Engineering</item>
        <item>Energy Engineering</item>
    </string-array>
    <string-array name="degrees">
        <item>Bachelor</item>
        <item>Master</item>
        <item>PHD</item>
        <item>School Diploma</item>
    </string-array>
    <string-array name="language_levels">
        <item>Fluent</item>
        <item>Advanced</item>
        <item>Intermediate</item>
        <item>Elementary</item>
    </string-array>
</resources>
