<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignupActivity" >

    <!-- Login form -->

    <ScrollView
        android:id="@+id/signup_form"
        style="@style/FormContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />


            <EditText
                android:id="@+id/password_again_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="@+id/edit_text_action_signup"
                android:imeActionLabel="@string/signup_title"
                android:imeOptions="actionUnspecified" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_user_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_student"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/student_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_company"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/company_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>

            <Button
                android:id="@+id/signup_confirm_button"
                style="@style/button"
                android:layout_gravity="end"
                android:text="@string/signup_title"/>
        </LinearLayout>
    </ScrollView>

</merge>