<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        style="@style/FormContainer" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="@+id/edittext_action_login"
                android:imeActionLabel="@string/login_title"
                android:imeOptions="actionUnspecified" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/login_action_button"
                    style="@style/button"
                    android:layout_weight="1"
                    android:text="@string/login_title" />
                <Button
                    android:id="@+id/signup_action_button"
                    style="@style/button"
                    android:layout_weight="1"
                    android:text="@string/signup_title" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</merge>