<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="15dp" android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/studentName"
            android:layout_width="0pt"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/editStuName"
            android:layout_width="0pt"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">

        <TextView
            android:text="@string/studentGender"
            android:layout_width="0pt"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/editStuGender"
            android:layout_width="0pt"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="male / female"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/studentAge"
            android:layout_width="0pt"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/editStuAge"
            android:layout_width="0pt"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <TextView
            android:text="@string/studentSpecialty"
            android:layout_width="0pt"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/editStuSpecialty"
            android:layout_width="0pt"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Please split the specialty by ,"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/studentEdu"
            android:layout_width="0pt"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <ImageButton
            android:id="@+id/imageBtnAddEdu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
    <ListView
        android:id="@+id/eduList"
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="6"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnUploadCV"
            android:text="@string/UploadCV"
            android:layout_width="0pt"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0pt"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnProfileComplete"
            android:text="@string/Finish"
            android:layout_width="0pt"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
