<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <!--Put form controls here-->

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="12pt">
        </TextView>

        <TextView
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:text="From:"
            android:textSize="20dp"
            android:layout_width="fill_parent"
            >
        </TextView>


        <TextView
            android:id="@+id/EditTextReciveddate"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:editable="false"
            android:layout_width="fill_parent">
        </TextView>
        <TextView
            android:id="@+id/EditTextRecivedMessage"
            android:layout_height="61dp"
            android:hint="@string/RecivedMessage"
            android:editable="false"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reply:"
            android:textSize="9pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="wrap_content"
            android:hint="@string/YourMessage"

            android:layout_width="fill_parent">
        </EditText>


        <Button
            android:id="@+id/ButtonSaveasDraft"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/sendResponse"
            android:onClick="sendResponse"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal">
        </Button>

    </LinearLayout>
</ScrollView>