<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/WizardFormLabel"
            android:text="@string/data_language"
            android:layout_weight="0.8"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/language_edit_text"
            android:layout_weight="1"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/WizardFormLabel"
            android:text="@string/data_language_level"
            android:layout_weight="0.8"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/language_level_edit_text"
            android:layout_weight="1"
            android:inputType="textCapWords" />
    </LinearLayout>
    <Button
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"

        android:id="@+id/language_add_button"
        android:layout_gravity="right" />
</LinearLayout>